--- a/posts/2025-07-06-gpu-puzzles-p1.qmd
+++ b/posts/2025-07-06-gpu-puzzles-p1.qmd
@@ -2,6 +2,7 @@
 title: "GPUs go brrr with Mojo - Fundamentals"
 author: Shubham Gupta
 date: '2025-07-06'
+description: Learning GPU programming fundamentals through hands-on Mojo implementations
 lightbox: true
 toc: true
 bibliography: citations/mojo_citations.bib
