Add image for p14 shared mem matmul

--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -145,3 +145,10 @@
   url = {https://siboehm.com/articles/22/CUDA-MMM},
   note = {Blog post exploring various CUDA matrix multiplication strategies and optimizations.}
 }
+@misc{mojo_layouttensor_setitem,
+  author = {Modular, Inc.},
+  title = {LayoutTensor.\_\_setitem\_\_ API Reference},
+  year = {2024},
+  url = {https://docs.modular.com/mojo/kernels/layout/layout_tensor/LayoutTensor/#__setitem__},
+  note = {Official documentation for the LayoutTensor \_\_setitem\_\_ method in Mojo.}
+}
