--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -152,3 +152,10 @@
   url = {https://docs.modular.com/mojo/kernels/layout/layout_tensor/LayoutTensor/#__setitem__},
   note = {Official documentation for the LayoutTensor \_\_setitem\_\_ method in Mojo.}
 }
+@misc{nhrfau_roofline_model,
+  author = {NHR@FAU},
+  title = {Roofline Model: Performance Modeling for Modern Processors},
+  year = {2022},
+  howpublished = {\url{https://www.youtube.com/watch?v=IrkNZG8MJ64}},
+  note = {Roofline performance model for CPUs and GPUs.}
+}
